Modifications in notebooks 0 and 1, added 2, 3 and 4

--- a/1-Bayes-Update--Coin-Toss.ipynb
+++ b/1-Bayes-Update--Coin-Toss.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {
     "scrolled": false
    },
@@ -227,7 +227,7 @@
     "\n",
     "Lets choose a Normal distribution as prior for $a$ and $b$, so $Q(a,b|I) = N(a|\\hat{a},v_a)N(b|\\hat{b},v_b)$ \n",
     "With the likehood $L$ we can update our prior $Q$ to the posterior $P = \\frac{QL}{Norm}$ and get an estimate for the parameters $a$ and $b$. For this case, lets use the posterior mean as an estimate, so $\\hat{a} = \\int aQ(a,b|I)\\mathrm{d}a$ and $\\hat{b} = \\int bQ(a,b|I) \\mathrm{d}b$.\n",
-    "We can do this *online*, by using each point in the dataset once and sequentilly, or *offline*, using the whole dataset once.\n",
+    "We can do this *online*, by using each point in the dataset once and sequentilly, or *offline*, using the whole dataset at once.\n",
     "\n",
     "Your tasks are:\n",
     "  1. Use the Probability rules to write the likelihood for the whole dataset\n",
